--- a/source/pages/shopcar/shopcar.wxml
+++ b/source/pages/shopcar/shopcar.wxml
@@ -14,20 +14,49 @@
         <!-- <checkbox-group class="shop_car" bindchange="checkboxChange"> -->
           <!-- 按钮 -->
           <view class="shop_car_btn">
-            <checkbox value="1" checked="true" color="#ffff"></checkbox>
-            {{item.goods_id}}
+            <checkbox  value="1" checked="true" style="width:70rpx;"></checkbox>
           </view>
           <!-- 图片-->
           <view class="shop_car_img">
-          <image class="shop_car_imgs" src="{{uploadpath}}mall/{{item.time.imglist[0].img}}" mode="widthFix" />
-   
+          <image class="shop_car_imgs" src="../../images/icons/222.png" mode="widthFix" />
           </view>
           <!-- 名称 -->
           <view class="shop_car_name">
-             
+             <view class="shop_car_ta">
+                羞美人手工日晒面伴手礼
+             </view>
+             <view class="shop_car_tb">
+               4人份拉面*2袋
+             </view>
+             <view class="shop_car_tc">
+              <view class="shop_car_tc_left">
+                 <view class="txt-c9 h6" >￥</view>
+                  <view class="txt-c9 h4">22</view>
+              </view>
+
+                    <view class="num_btn_box">
+            <view class="btn_s btn_1" wx:if="{{quantity == 1}}">-</view>
+            <view class="btn_s btn_3" bindtap="reducequantity" wx:else>-</view>
+            <input class="btn_input" bindblur="editInput" type="number" value="{{quantity}}" />
+            <view class="btn_s btn_2" bindtap="addquantity">+</view>
+        </view>
+             </view>
           </view>
         <!-- </checkbox-group> -->
       </view>
     </view>
+  </view>
+  <view class="shopacr_bottom">
+    <view class="shopacr_bottom_ta">
+               <checkbox  value="" checked="true" style="width:70rpx;"></checkbox>
+               <text class="bootom_ta_text">全选</text>
+             </view>
+             <view class="shopacr_bottom_tb">
+              合计:   <view class="txt-c9 h6" >￥</view>
+                  <view class="mony">22</view>
+             </view>
+            <view class="shopacr_bottom_tc">
+              <button class="queren" type="primary">结算</button>
+            </view>
   </view>
 </view>
