--- a/source/pages/shopcar/shopcar.wxss
+++ b/source/pages/shopcar/shopcar.wxss
@@ -1,70 +1,239 @@
+page {
+  background-color: #F3F6F7;
+}
+
 .shopcar_box {
-    width: 100%;
-    height: 50px;
-    background-color: #FFFFFF;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+  width: 100%;
+  height: 50px;
+  background-color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 page {
-    background-color: #F3F6F7;
+  background-color: #F3F6F7;
 }
 
 .shopcar_text {
 
-    margin-right: 20px;
-    font-size: 16px;
-    font-family: PingFangSC-Regular, PingFang SC;
-    font-weight: 400;
-    color: #333333;
+  margin-right: 20px;
+  font-size: 16px;
+  font-family: PingFangSC-Regular, PingFang SC;
+  font-weight: 400;
+  color: #333333;
 
 }
-.main_box{
-    width: 95%;
-    margin: 0 auto;
-    background-color: #FFFFFF;
-    margin-top: 10px;
-    display: flex;
-    border-radius: 10px;
-    
-height: 128px;
+
+.shopcar_main {
+  margin-bottom: 60px;
 }
-.shop_car{
-    margin: 10px 0;
-    display: flex;
-    width: 100%;
+
+.main_box {
+  width: 95%;
+  margin: 0 auto;
+  background-color: #FFFFFF;
+  margin-top: 10px;
+  display: flex;
+  border-radius: 10px;
+
+  height: 128px;
 }
-.shop_car_btn{
-    display: flex;
-    align-items: center;
-    margin-left: 10px;
+
+.shop_car {
+  display: flex;
+  width: 100%;
+  align-items: center;
 }
-checkbox .wx-checkbox-input{
-    width: 40rpx; 
-    height: 40rpx; 
-    border-radius: 50%;
-  }
-  checkbox .wx-checkbox-input.wx-checkbox-input-checked{
-    border: none;
-    background: #37C674;
-  }
-  checkbox .wx-checkbox-input.wx-checkbox-input-checked::before{
-    width: 40rpx;
-    height: 40rpx;
-    line-height: 40rpx;
-    border-radius: 50%;
-    text-align: center;
-    font-size:32rpx; 
-    color:#FFF; 
-    background: transparent;
-    transform:translate(-50%, -50%) scale(1);
-    -webkit-transform:translate(-50%, -50%) scale(1);
-  }
-  .shop_car_img{
-    width: 30%;
-  }
-  .shop_car_imgs{
-    width: 100%;
-    height: 100%;
-  }
+
+.shop_car_btn {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+}
+
+/* 多选框样式 */
+checkbox .wx-checkbox-input {
+  width: 40rpx;
+  height: 40rpx;
+  border-radius: 50%;
+}
+
+checkbox .wx-checkbox-input.wx-checkbox-input-checked {
+  border: none;
+  background: #37C674;
+}
+
+checkbox .wx-checkbox-input.wx-checkbox-input-checked::before {
+  width: 40rpx;
+  height: 40rpx;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 32rpx;
+  color: #FFF;
+  background: transparent;
+  /* transform: translate(-50%, -50%) scale(1);
+  -webkit-transform: translate(-50%, -50%) scale(1); */
+}
+
+.shop_car_img {
+  width: 30%;
+  margin-left: 10px;
+}
+
+.shop_car_imgs {
+  width: 100%;
+  height: 100%;
+}
+
+.shopacr_bottom {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 10%;
+  background-color: #FFFFFF;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+}
+
+.shop_car_name {
+  height: 80%;
+  margin: 0px 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between
+}
+
+.shop_car_ta {
+  font-size: 16px;
+  font-family: PingFangSC-Semibold, PingFang SC;
+  font-weight: 600;
+  color: #454954;
+  line-height: 22px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.shop_car_tb {
+
+  height: 24px;
+  background: #F5F5F5;
+  border-radius: 4px;
+  font-size: 14px;
+  font-family: PingFangSC-Regular, PingFang SC;
+  font-weight: 400;
+  color: #999999;
+  margin-bottom: 10px;
+}
+
+.shop_car_tc {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.shop_car_tc_left {
+  display: flex;
+  align-items: center;
+}
+
+/* 确认按钮 */
+.num_btn_box {
+  margin-right: 10px;
+  display: flex;
+  width: 33%;
+  border: 1px solid #dcdcdc;
+  border-radius: 5px;
+}
+
+.btn_s {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  font-size: 20px;
+}
+
+.btn_1 {
+  border-radius: 10px 0 0 10px;
+  border-right: 1px solid #dcdcdc;
+  color: #Cccc;
+}
+
+.btn_2 {
+  border-left: 1px solid #dcdcdc;
+}
+
+.btn_3 {
+  border-radius: 10px 0 0 10px;
+  border-right: 1px solid #dcdcdc;
+}
+
+.btn_input {
+  width: 120%;
+  height: 27px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.shopacr_bottom_ta {
+  margin-left: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.bootom_ta_text {
+  width: 28px;
+  height: 20px;
+  font-size: 14px;
+  font-family: PingFangSC-Regular, PingFang SC;
+  font-weight: 400;
+  color: #999999;
+  line-height: 20px;
+}
+
+.shopacr_bottom_tb {
+
+  font-size: 14px;
+  font-family: PingFangSC-Medium, PingFang SC;
+  font-weight: 500;
+  color: #333333;
+  line-height: 14px;
+  margin-left: 8px;
+  display: flex;
+  align-items: center;
+}
+.shopacr_bottom_ta,.shopacr_bottom_tb{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  font-size: 0;
+}
+.mony{
+  font-size: 23px;
+font-family: PingFangSC-Medium, PingFang SC;
+font-weight: 500;
+color: #E62129;
+height: 100%;
+display: flex;
+align-items: center;
+}
+.queren{
+  background: #5AA57A!important;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.shopacr_bottom_tc{
+  display: flex;
+  align-items: center;
+  margin-left: 90px;
+  height: 60%;
+  width: 35%;
+  border-radius: 50px;
+}
